--- a/style.css
+++ b/style.css
@@ -829,25 +829,25 @@ background-color: white;
     background-image: url(gallery-4.jpg);
 }
 .g-box2{
-    background-image: url(/gallery-2.jpg);
+    background-image: url(gallery-2.jpg);
 }
 .g-box3{
-    background-image: url(/gallery-6.jpg);
+    background-image: url(gallery-6.jpg);
 }
 .g-box4{
-    background-image: url(/gallery-1.jpg);
+    background-image: url(gallery-1.jpg);
 }
 .g-box5{
-    background-image: url(/gallery-5.jpg);
+    background-image: url(gallery-5.jpg);
 }
 .g-box6{
-    background-image: url(/gallery-3.jpg);
+    background-image: url(gallery-3.jpg);
 }
 .g-box7{
-    background-image: url(/gallery-7.jpg);
+    background-image: url(gallery-7.jpg);
 }
 .g-box8{
-    background-image: url(/gallery-8.jpg);
+    background-image: url(gallery-8.jpg);
 }
 .gallery-box:hover{
     transform:scale(1.03);
