--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 }
 .social-icons{
     flex:1;
-    margin-left:600px ;
+/*     margin-left:600px ; */
      /* margin-left:500px */
     color:rgba(56, 101, 168, 0.699);
     color: #1977cc;
